--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     </header>
     <main class="bg-secondary-3dark min-vh-50">
         <div class="container">
-            <p>hello</p>
+            <p class="text-primary">hello</p>
         </div>
     </main>
 </body>
