--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     <header>
     
     </header>
-    <main class="bg-secondary-3dark min-vh-50">
-        <div class="container">
-            <p class="text-primary">hello</p>
+    <main class="bg-secondary-dark min-vh-100">
+        <div class="box bg-danger">
+            <p class="text-primary fw-bold fs-1">hello</p>
         </div>
     </main>
 </body>
