Added the animations folder

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header>
     
     </header>
-    <main class="bg-secondary-3dark min-vh-50">
+    <main class="bg-secondary-dark min-vh-50">
         <div class="container">
             <p>hello</p>
         </div>
