--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     
     </header>
     <main class="bg-secondary-dark min-vh-100">
-        <div class="box-md bg-danger">
+        <div class="box-full bg-danger">
             <p class="text-primary fw-bold fs-1">hello</p>
         </div>
     </main>
