buttons, nav, and more variables

--- a/index.html
+++ b/index.html
@@ -5,16 +5,42 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/index.css">
-    <title>sass</title>
+    <title>Fun UI</title>
 </head>
 <body>
     <header>
-    
+        <nav component="nav" class="box bg-primary w-6 d-flex ai-center jc-between">
+            <div class="brand fw-bold text-light">
+                Fun Ui
+            </div>
+            <ul class="nav-links-col nav-links-bold jc-between ai-center w-2">
+                <a href="#">
+                    <li class="nav-link text-light">
+                        Docs
+                    </li>
+                </a>
+                <a href="#">
+                    <li class="nav-link text-light">
+                        Templates
+                    </li>
+                </a>
+                <a href="#">
+                    <li class="nav-link text-light">
+                        Usage
+                    </li>
+                </a>
+                <li class="nav-link">
+                    <button class="btn btn-light text-primary">Download</button>
+                </li>
+            </ul>
+        </nav>
     </header>
-    <main class="bg-secondary-dark min-vh-100">
-        <div class="box-full bg-danger">
-            <p class="text-primary fw-bold fs-1">hello</p>
-        </div>
+    <main class="">
+       
     </main>
+    <footer></footer>
+
+
+    <script src="./script/index.js" type="module"></script>
 </body>
 </html>
