--- a/index.html
+++ b/index.html
@@ -8,35 +8,29 @@
     <title>Fun UI</title>
 </head>
 <body>
-    <header>
-        <nav component="nav" class="box bg-primary w-6 d-flex ai-center jc-between">
-            <div class="brand fw-bold text-light">
+    <header class="position-sticky">
+        <nav component="nav" class="box-full bg-transparent w-6 d-flex ai-center jc-between">
+            <div class="brand fw-bold text-primary ml-6">
                 Fun Ui
             </div>
-            <ul class="nav-links-col nav-links-bold jc-between ai-center w-2">
-                <a href="#">
-                    <li class="nav-link text-light">
-                        Docs
-                    </li>
-                </a>
-                <a href="#">
-                    <li class="nav-link text-light">
-                        Templates
-                    </li>
-                </a>
-                <a href="#">
-                    <li class="nav-link text-light">
-                        Usage
-                    </li>
-                </a>
-                <li class="nav-link">
-                    <button class="btn btn-light text-primary">Download</button>
-                </li>
-            </ul>
         </nav>
     </header>
-    <main class="">
-       
+    <main>
+       <section class="min-vh-75 bg-g1">
+           <div class="box">
+               <div class="row bg-warning">
+                   <div class="col-6 bg-danger">
+                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ullam non architecto ipsa. Natus aperiam est, tenetur amet, suscipit ullam quas consequuntur optio reprehenderit accusamus maiores soluta consectetur quis nemo tempore facere, perferendis officiis quae? Molestias cum a beatae, quidem, consectetur voluptatem modi veniam sit temporibus, rerum id. Earum, consequuntur rem?
+                   </div>
+                   <div class="col-6 bg-info">
+                       Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat ad sequi temporibus sunt voluptas accusantium, libero dolor et optio, exercitationem harum nobis enim accusamus, eaque rerum magni amet nisi corporis itaque voluptate veniam. Vero temporibus ea laborum ipsum, quod est rem consequuntur rerum non amet reprehenderit hic exercitationem corrupti similique!
+                   </div>
+               </div>
+           </div>
+       </section>
+       <section></section>
+       <section></section>
+       <section></section>
     </main>
     <footer></footer>
 
