--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,34 +8,30 @@
     <link rel="stylesheet" href="./css/index.css">
     <title>Fun UI</title>
 </head>
+
 <body>
-    <header class="position-sticky">
-        <nav component="nav" class="box-full bg-transparent w-6 d-flex ai-center jc-between">
-            <div class="brand fw-bold text-primary ml-6">
-                Fun Ui
+    <header class="position-sticky bg-primary py-1 shadow-md ">
+        <nav component="nav-sm" class="box">
+            <div class="d-flex w-6 jc-between ai-center">
+                <div>
+                   <a class="brand fw-bold text-light" href="" id="logo">Fun Ui</a>
+                </div>
+                <div class="d-flex jc-between ai-center w-2"> 
+                    <a href="https://github.com/HANNIEL21/morden-UI" class="text-light fw-bold">Github</a>
+                    <a href="" id="docs" class="text-light fw-bold">Docs</a>
+                    <a href="" id="usage" class="text-light fw-bold">Usage</a>
+                    <a href="#" class=""><button class="btn btn-outline-info fw-bold btn-rounded-2">Download  V1.0.0</button></a>
+                </div>
             </div>
         </nav>
     </header>
-    <main>
-       <section class="min-vh-75 bg-g1">
-           <div class="box">
-               <div class="row bg-warning">
-                   <div class="col-6 bg-danger">
-                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ullam non architecto ipsa. Natus aperiam est, tenetur amet, suscipit ullam quas consequuntur optio reprehenderit accusamus maiores soluta consectetur quis nemo tempore facere, perferendis officiis quae? Molestias cum a beatae, quidem, consectetur voluptatem modi veniam sit temporibus, rerum id. Earum, consequuntur rem?
-                   </div>
-                   <div class="col-6 bg-info">
-                       Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat ad sequi temporibus sunt voluptas accusantium, libero dolor et optio, exercitationem harum nobis enim accusamus, eaque rerum magni amet nisi corporis itaque voluptate veniam. Vero temporibus ea laborum ipsum, quod est rem consequuntur rerum non amet reprehenderit hic exercitationem corrupti similique!
-                   </div>
-               </div>
-           </div>
-       </section>
-       <section></section>
-       <section></section>
-       <section></section>
+    <main id="main">
+        
     </main>
     <footer></footer>
 
-
+    <script src='https://code.jquery.com/jquery-3.6.0.min.js'></script>
     <script src="./script/index.js" type="module"></script>
 </body>
+
 </html>
