--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 </head>
 
 <body>
-    <header class="position-sticky bg-primary py-1 shadow-md ">
-        <nav component="nav-sm" class="box">
+    <header class="position-sticky bg-primary py-1 shadow-md">
+        <!-- <nav component="nav-sm" class="box">
             <div class="d-flex w-6 jc-between ai-center">
                 <div>
                    <a class="brand fw-bold text-light" href="" id="logo">Fun Ui</a>
@@ -23,9 +23,21 @@
                     <a href="#" class=""><button class="btn btn-outline-info fw-bold btn-rounded-2">Download  V1.0.0</button></a>
                 </div>
             </div>
-        </nav>
+        </nav> -->
     </header>
-    <main id="main">
+    <main id="main" class="grid">
+        <div class="grid-col-12"></div>
+        <div class="grid-item"></div>
+        <div class="grid-item"></div>
+        <div class="grid-item"></div>
+        <div class="grid-item"></div>
+        <div class="grid-item"></div>
+        <div class="grid-item"></div>
+        <div class="grid-item"></div>
+        <div class="grid-item"></div>
+        <div class="grid-item"></div>
+        <div class="grid-item"></div>
+        <div class="grid-item"></div>
         
     </main>
     <footer></footer>
