--- a/index.html
+++ b/index.html
@@ -26,19 +26,20 @@
         </nav> -->
     </header>
     <main id="main" class="grid">
-        <div class="grid-col-12"></div>
-        <div class="grid-item"></div>
-        <div class="grid-item"></div>
-        <div class="grid-item"></div>
-        <div class="grid-item"></div>
-        <div class="grid-item"></div>
-        <div class="grid-item"></div>
-        <div class="grid-item"></div>
-        <div class="grid-item"></div>
-        <div class="grid-item"></div>
-        <div class="grid-item"></div>
-        <div class="grid-item"></div>
-        
+        <div class="grid-row">
+            <div class="grid-col-12 bg-primary">1</div>
+            <div class="grid-col-11 bg-info">2</div>
+            <div class="grid-item">3</div>
+            <div class="grid-col-10">4</div>
+            <div class="grid-item">5</div>
+            <div class="grid-item">6</div>
+            <div class="grid-item">7</div>
+            <div class="grid-item">8</div>
+            <div class="grid-item">9</div>
+            <div class="grid-item">10</div>
+            <div class="grid-item">11</div>
+            <div class="grid-item">12</div>
+        </div>
     </main>
     <footer></footer>
 
