--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     </header>
     <main id="main" class="grid">
         <div class="grid-row">
-            <div class="grid-col-12 bg-primary">1</div>
+            <div class="grid-col-12 bg-primary justify-center">1</div>
             <div class="grid-col-11 bg-info">2</div>
             <div class="grid-item">3</div>
             <div class="grid-col-10">4</div>
