--- a/index.html
+++ b/index.html
@@ -11,29 +11,33 @@
 
 <body>
     <header class="position-sticky bg-primary py-1 shadow-md">
-        <!-- <nav component="nav-sm" class="box">
-            <div class="d-flex w-6 jc-between ai-center">
-                <div>
-                   <a class="brand fw-bold text-light" href="" id="logo">Fun Ui</a>
-                </div>
-                <div class="d-flex jc-between ai-center w-2"> 
-                    <a href="https://github.com/HANNIEL21/morden-UI" class="text-light fw-bold">Github</a>
-                    <a href="" id="docs" class="text-light fw-bold">Docs</a>
-                    <a href="" id="usage" class="text-light fw-bold">Usage</a>
-                    <a href="#" class=""><button class="btn btn-outline-info fw-bold btn-rounded-2">Download  V1.0.0</button></a>
+        <nav component="nav" class="box grid grid-row">
+            <div class="grid-col-6 ailgn-center">
+                <a class="brand fw-bold text-light" href="" id="logo">Fun Ui</a>
+            </div>
+            <div class="grid-col-6 justify-end">
+                <div class="grid">
+                    <div class="grid-row ailgn-center justify-end bg-info">
+                        <a href="https://github.com/HANNIEL21/morden-UI"
+                            class="text-light fw-bold  grid-col-2 justify-center">Github</a>
+                        <a href="" id="docs" class="text-light fw-bold grid-col-2 justify-center">Docs</a>
+                        <a href="" id="usage" class="text-light fw-bold grid-col-2 justify-center">Usage</a>
+                        <a href="#" class="grid-col-3 bg-danger"><button class="btn btn-outline-info fw-bold btn-rounded-2">Download
+                                V1.0.0</button></a>
+                    </div>
                 </div>
             </div>
-        </nav> -->
+        </nav>
     </header>
     <main id="main" class="grid">
-        <div class="grid-row">
-            <div class="grid-col-12 bg-primary justify-center">1</div>
-            <div class="grid-col-11 bg-info">2</div>
-            <div class="grid-item">3</div>
-            <div class="grid-col-10">4</div>
-            <div class="grid-item">5</div>
-            <div class="grid-item">6</div>
-            <div class="grid-item">7</div>
+        <div class="grid-row justify-end">
+            <div class="grid-col-8 bg-primary"><span >1</span></div>
+            <div class="grid-col-8 bg-info">2</div>
+            <div class="grid-col-8 grid-item">3</div>
+            <div class="grid-col-8 ">4</div>
+            <div class="grid-col-8 grid-item">5</div>
+            <div class="grid-col-8 grid-item">6</div>
+            <div class="grid-col-8 grid-item">7</div>
             <div class="grid-item">8</div>
             <div class="grid-item">9</div>
             <div class="grid-item">10</div>
