--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <div class="grid-col-6 ailgn-center">
                 <a class="brand fw-bold text-light" href="" id="logo">Fun Ui</a>
             </div>
-            <div class="grid-col-6 justify-end">
+            <!-- <div class="grid-col-6 justify-end">
                 <div class="grid">
                     <div class="grid-row ailgn-center justify-end bg-info">
                         <a href="https://github.com/HANNIEL21/morden-UI"
@@ -26,24 +26,13 @@
                                 V1.0.0</button></a>
                     </div>
                 </div>
-            </div>
+            </div> -->
         </nav>
     </header>
-    <main id="main" class="grid">
-        <div class="grid-row justify-end">
-            <div class="grid-col-8 bg-primary"><span >1</span></div>
-            <div class="grid-col-8 bg-info">2</div>
-            <div class="grid-col-8 grid-item">3</div>
-            <div class="grid-col-8 ">4</div>
-            <div class="grid-col-8 grid-item">5</div>
-            <div class="grid-col-8 grid-item">6</div>
-            <div class="grid-col-8 grid-item">7</div>
-            <div class="grid-item">8</div>
-            <div class="grid-item">9</div>
-            <div class="grid-item">10</div>
-            <div class="grid-item">11</div>
-            <div class="grid-item">12</div>
-        </div>
+    <main id="main" class="">
+       <div class="box bg-primary">
+           <h1 class="bg-info">HELLO</h1>
+       </div>
     </main>
     <footer></footer>
 
